--- a/releasenotes/index.html
+++ b/releasenotes/index.html
@@ -15,8 +15,13 @@
 
 		h1 {
 			font-family:arial, verdana;
-			font-size:16px;
+			font-size:20px;
+			background:#eee;
+			color: #333;
+			padding: 5px;
 		}
+		ul  {list-style-type: circle;}
+		
 	</style>
 	<script src="markdown.min.js" type="text/javascript"></script>
 	<script src="../jquery-2.0.1.min.js"></script>
